# keep_learning

./: .gitignore  .gitmodules  Pipfile  README.md  env.sh  py_env.sh  pyproject.toml
books/dive_into_dl/d2l-zh/mxnet/chapter_computational-performance/: multiple-gpus.ipynb
books/dive_into_dl/d2l-zh/paddle/chapter_computational-performance/: multiple-gpus.ipynb
books/dive_into_dl/d2l-zh/pytorch/chapter12_computational-performance/: multiple-gpus.ipynb
books/dive_into_dl/d2l-zh/pytorch/chapter8_recurrent-neural-networks/: 1_sequence.ipynb  2_text-preprocessing.ipynb
common/: __init__.py  ipynb_importer.py  pg_common.py
db/: pg_00_common.ipynb  pg_01_querying_colunm_alias.ipynb  pg_02_filtering_and.ipynb  pg_02_filtering_and_or.ipynb  pg_02_filtering_fetch.ipynb  pg_02_filtering_limit.ipynb  pg_tutorial_03_order_by.ipynb  test_parquet.ipynb
db/pg/: pg_00_common.ipynb  pg_00_sample_data.ipynb  pg_01_querying_distinct.ipynb  pg_01_querying_select.ipynb  pg_02_filtering_and_or.ipynb  pg_02_filtering_fetch.ipynb  pg_02_filtering_in_between_like.ipynb  pg_02_filtering_limit.ipynb  pg_02_filtering_where.ipynb  pg_03_joining_cross.ipynb  pg_03_joining_full_outer.ipynb  pg_03_joining_inner.ipynb  pg_03_joining_joins.ipynb  pg_03_joining_left.ipynb  pg_03_joining_natural.ipynb  pg_03_joining_right.ipynb  pg_03_joining_self.ipynb  pg_03_joining_table_alias.ipynb  pg_04_grouping_cube.ipynb  pg_04_grouping_group_by.ipynb  pg_04_grouping_having.ipynb  pg_04_grouping_rollup.ipynb  pg_04_grouping_sets.ipynb  pg_05_set_except.ipynb  pg_05_set_intersect.ipynb  pg_05_set_unoin.ipynb  pg_06_subquery.ipynb  pg_06_subquery_any_all_exist.ipynb  pg_06_subquery_corelated.ipynb  pg_07_common_table_exp.ipynb  pg_07_cte_recursive.ipynb  pg_08_modifying_insert.ipynb  pg_08_modifying_update_delete.ipynb  pg_08_modifying_upsert.ipynb  pg_09_transactions.ipynb  pg_11_managing_tables_alert.ipynb  pg_11_managing_tables_auto_increment.ipynb  pg_11_managing_tables_copy.ipynb  pg_11_managing_tables_create.ipynb  pg_11_managing_tables_identity_col.ipynb  (+52 more)
db/s3/: cf-R2-s3.ipynb  weed-s3.ipynb
linux/: how_linux_works.md
linux/commands/: sed-examples.sh
ml/cuda/: CMakeLists.txt
ml/cuda/basic/: CMakeLists.txt  main.cu
ml/cuda/cmake/: assign_source_group.cmake  get_platform.cmake  import_library.cmake  utils.cmake
ml/cuda/demo_add/: CMakeLists.txt  main.cu
ml/cuda/demo_basic/: CMakeLists.txt  main.cu
ml/cuda/include/utils/: XLogger.h  common.h  export.hpp  singleton.h
ml/dl/00_neuralNet/00_from_scratch/: 00_outlines.ipynb  01_Foundations.ipynb  02_Fundamentals.ipynb  03_DeepLearningFromScratch.ipynb  04_Extensions.ipynb  05_CNN.ipynb  06_RNN.ipynb  mnist.py  utils.py
ml/dl/00_neuralNet/01_basic/: SGD.ipynb
ml/dl/01_basic/: preliminary_mathematical.ipynb
ml/dl/02_computer_vision/: 00_GAN.ipynb  01_AutoEncoder.ipynb  01_AutoEncoder_modify.ipynb  03_image_embedding_analysis.ipynb  AE.ipynb  GCN.ipynb
ml/dl/convNet/00_preliminary/: torch_03.ipynb
ml/dl/convNet/01_basic/: backpropagation_manual.ipynb
ml/dl/lincoln/: losses.py
ml/dl/lincoln/utils/: mnist.py  mnist_torch.py
ml/experiment/: 00_towhee_offical_guide.ipynb  01_towhee_test.ipynb  02_milvus_towhee.ipynb  03_CLIP.ipynb  03_Open_CLIP.ipynb  03_Open_CLIP_2.ipynb  04_img2dataset.ipynb  05_antarctic-caption.ipynb  06_fondant_process.ipynb
ml/expirements/: 00_towhee_offical_guide.ipynb  01_towhee_test.ipynb
ml/pytorch/official_tutorials/: 01_recipes_loading_data_in_pytorch.ipynb  02_defining_a_neural_net.ipynb  03_TORCH_LOGS.ipynb  04_state_dict.ipynb
ml/pytorch/zero_to_mastery/: 00_PyTorch_Fundamentals.ipynb  README.md
os/linux/commands/: test.conf
others/: CMake.md  TensorRT.md  ftp.md  jenkins.md  linux.md  poetry.md  py.md
program_lang/rust/: README.md
program_lang/rust/kl-learn-rust-in-30mins/: Cargo.toml
program_lang/rust/kl-learn-rust-in-30mins/src/: main.rs
project_template/full-stack-fastapi-template/: Makefile  pyproject.toml
project_template/full-stack-fastapi-template/backend/: pyproject.toml
project_template/full-stack-fastapi-template/backend/app/alembic/versions/: 9c0a54914c78_add_max_length_for_string_varchar_.py
project_template/nsis_template/: README.md  build-setup.bat  license.txt  service-install.bat  service-uninstall.bat  service-update-config.bat  setup.nsi  test.bat  test_u.bat  ui-macro.nsh  ui.nsdinc  upload.bat
project_template/nsis_template/modules/nginx-1.24.0/conf/: nginx.conf
project_template/py_project/: .gitignore  Pipfile  pyproject.toml
project_template/py_project/config/: config.yaml
project_template/py_project/py_project/: __init__.py  __main__.py  app.py
project_template/py_project/py_project/http/: __init__.py  dask_client.py  handler.py  server.py
project_template/py_project/py_project/utils/: __init__.py  config.py  custom_logging.py  dask_client.py
prototype_design/: test.rp
rust/: README.md
rust/kl-learn-rust-in-30mins/src/: main.rs
scripts/: docker-compose.yml  docker.md  ftp.md  jenkins.md  linux.md  nginx-ssl.conf  nginx.conf  others.md  poetry.md  py.md  win_batch.md  win_bath.md
sys_desgin/: grokking_concurrency.ipynb
tmp/: area_growing.ipynb  canny.ipynb  get_gradient_bg.ipynb  hough.ipynb  img_quality.ipynb  mlflow.ipynb  ocr_box_query.ipynb  paddleOCR_multiple_gpu.py  parallel_process.ipynb  points_line.ipynb  prefect_01.py  prefect_02.py  prefect_03_deployment.py  sobel.ipynb  test1.ipynb  test3.ipynb  text_similarity.ipynb
tmp/example_data/: 1.json  2.json  area_growing.ipynb  query.json  test.json
tmp/lib_tester/: dask_10mins.ipynb  dask_client.ipynb  dask_localCluster.ipynb  pathos.ipynb  request_test.ipynb  test_parquet.ipynb
