[tool.poetry]
name = "keep-learning"
version = "0.1.0"
description = ""
authors = ["Darkness <navono007@gmail.com>"]
readme = "README.md"
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.9"
pandas = ">=2.0.3,<3.0.0"
pyarrow = ">=6.0.1,<16"
psycopg = { extras = ["binary", "pool"], version = "^3.1.18" }
opencv-python = "4.6.0.66"
shapely = "^2.0.4"
pillow = "^10.3.0"
svgpathtools = "^1.6.1"
matplotlib = ">=3.7.2,<4.0.0"
replicate = "^0.25.2"
torch = { version = "2.3.0+cu121", source = "pytorch" }
torchvision = { version = "0.18.0+cu121", source = "pytorch" }
torchaudio = { version = "2.3.0+cu121", source = "pytorch" }
onnxruntime = "^1.17.3"
d2l = "^1.0.3"
soundfile = "^0.12.1"
dgl = { url = "https://data.dgl.ai/wheels/dgl-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl" }
towhee = "^1.1.3"
towhee-models = "^1.1.3"
timm = "^1.0.3"
scikit-learn = "^1.4.2"
pymilvus = "2.4"
open-clip-torch = "^2.24.0"
transformers = "^4.41.0"
all-clip = "^1.2.0"
jupyterlab = "^4.2.1"
jupyter = "^1.0.0"
clip = { git = "https://github.com/openai/CLIP.git" }
setuptools = "69.5.1"
packaging = "22.0"
nltk = "^3.8.1"
notebook = "^7.2.1"
jmespath = "^1.0.1"
jieba = "^0.42.1"
dask = "^2024.6.1"
more-itertools = "^10.3.0"
apache-airflow = "^2.9.2"
prefect = "^2.19.5"
httptools = "^0.6.1"
httpx = "^0.27.0"
paddleocr = { git = "https://github.com/PaddlePaddle/PaddleOCR.git", rev = '739400f1514e0269a959118030c6788383557969' }
paddlepaddle-gpu = { version = "2.6.1.post120", source = "paddle" }

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121/"
priority = "supplemental"

[[tool.poetry.source]]
name = "paddle"
#url = "https://www.paddlepaddle.org.cn/whl/linux/mkl/avx/stable.html"
url = "https://www.paddlepaddle.org.cn/whl/windows/mkl/avx/stable.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


